--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-scripts": "4.0.1",
     "redux": "^4.0.5",
     "styled-components": "^5.2.1",
+    "tone": "^14.7.58",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
